--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -39,6 +39,10 @@ body {
     font-size: 14px;
     line-height: 20px;
 }
+.fs-normal {
+    font-size: 18px;
+    line-height: 24px;
+}
 .fs-md {
     font-size: 24px;
     line-height: 32px;
