--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -84,6 +84,7 @@ body {
 
 .page {
     background-color: var(--page-bg);
+    overflow: hidden;
 }
 
 /* First Page */
@@ -135,10 +136,14 @@ body {
 .second-slide-textbox {
     max-width: 450px;
 }
+.mini-text-box {
+    text-align: center;
+    margin-left: 0;
+}
 
 /* Third Slid */
 .vertical-border-img {
-    transform: rotate(90deg);
+    max-height: 450px;
 }
 .info-grid {
     display: grid;
@@ -168,7 +173,7 @@ body {
 
 /* Footer */
 footer {
-    z-index: 1;
+    z-index: 10;
 }
 .logo {
     max-width: 100px;
