--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -38,7 +38,7 @@
         margin-left: 0;
     }
     .pack img {
-        max-width: 400px;
+        max-width: 100%;
     }
     .logo {
         max-width: 50px;
