--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -39,6 +39,9 @@
     }
     .pack img {
         max-width: 100%;
+        margin-left: 30px;
+        position: relative;
+        z-index: 10;
     }
     .logo {
         max-width: 50px;
