--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -1,4 +1,4 @@
-@media screen and (min-width: 769px) and (max-width: 991px) {
+@media screen and (min-width: 768px) {
     .pack img.all-pack {
         max-width: 50%;
         margin-left: 50%;
@@ -33,7 +33,7 @@
         max-width: 15.25rem;
     }
 }
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 540px) {
     .fs-md {
         font-size: 0.813rem;
         line-height: 1.125rem;
