--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -1,4 +1,4 @@
-@media screen and (min-width: 768px) {
+@media screen and (max-width: 768px) {
     .pack img.all-pack {
         max-width: 50%;
         margin-left: 50%;
