--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -24,6 +24,7 @@ body {
     font-family: var(--primary-font);
     position: relative;
     color: var(--dark-color);
+    overflow-x: hidden;
 }
 
 .color-primary {
@@ -39,6 +40,7 @@ body {
     font-size: 0.875rem;
     line-height: 1.25rem;
 }
+
 .fs-normal {
     font-size: 1.125rem;
     line-height: 24px;
@@ -55,8 +57,11 @@ body {
     font-size: 2rem;
 }
 .fs-xxl {
-    font-size: 3.5rem;
-    line-height: 4.5rem;
+	font-size: 5.625rem;
+}
+.page-title {
+	font-size: 3.5rem;
+	line-height: 4rem;
 }
 .w-45 {
     width: 2.813rem;
@@ -71,30 +76,24 @@ body {
 #paged {
     width: 100%;
     position: relative;
-    height: 100vh;
-    overflow: hidden;
 }
 .page {
     width: 100%;
     height: 100vh;
-    padding: 1.875rem;
-    position: absolute;
-    transition: opacity 0.5s ease;
-}
-
-.page {
+    padding: 10px;
+    /* position: absolute; */
     background-color: var(--page-bg);
     overflow: hidden;
     transition: .5s all ease-in-out;
 }
-.page:nth-child(1) {
+/* .page:nth-child(1) {
     transform: translateY(0);
 }
 .page:nth-child(2),
 .page:nth-child(3),
 .page:nth-child(4) {
     transform: translateY(100%);
-}
+} */
 
 /* First Page */
 .pack {
@@ -147,9 +146,15 @@ body {
 .border-img {
     bottom: -5px;
 }
+.title-border-img {
+    bottom: 0;
+}
 .mini-text-box {
     text-align: center;
     margin-left: 0;
+}
+.pack-infography {
+	width: 400px !important;
 }
 
 /* Third Slid */
@@ -173,7 +178,7 @@ body {
 
 /* Fourth Page */
 .logo-alt {
-    max-width: 18.75rem;
+    max-width: 10.5rem;
 }
 .right-arrow-lg {
     max-width: 31.25rem;
@@ -185,9 +190,6 @@ body {
 /* Footer */
 footer {
     z-index: 10;
-}
-#prev, #next {
-    background-color: white;
 }
 .logo {
     max-width: 6.25rem;
