--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -27,6 +27,9 @@ body {
     overflow-x: hidden;
 }
 
+span.color-primary {
+	font-weight: 800 !important;
+}
 .color-primary {
     color: var(--primary);
 }
